--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "devDependencies": {
     "@types/bluebird": "^3.0.37",
     "@types/body-parser": "^0.0.33",
+    "@types/chai": "^3.4.34",
     "@types/express": "^4.0.35",
     "@types/helmet": "^0.0.33",
     "@types/request": "^0.0.39",
     "@types/request-promise": "^4.1.33",
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "ts-node": "^2.0.0",
     "typescript": "^2.1.5"
   },
   "dependencies": {
